fixup! Wrap trip planner form in callout and add sticky position

--- a/apps/site/web/static/css/_trip_plan.scss
+++ b/apps/site/web/static/css/_trip_plan.scss
@@ -8,5 +8,8 @@
 }
 
 .trip-plan-form-container {
-  top: 0;
+  @include media-breakpoint-up(md) {
+    top: 0;
+    position: sticky
+  }
 }
